fix(GuildProfile): broken layout (closes #89)

--- a/src/GuildProfile/style.scss
+++ b/src/GuildProfile/style.scss
@@ -20,7 +20,6 @@
     }
 
     .guild-info {
-        height: 100%;
         padding: 20px 10px;
 
         .section {
